--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shipping Request Form</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -26,5 +27,6 @@
     <footer>
         This project was coded by Laurel Stokely
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
