added some html code

--- a/index.html
+++ b/index.html
@@ -16,14 +16,19 @@
         <main>
             <form>
                 <div>
-                    <input type="text" placeholder="First Name" label= "First Name"/>
-                    <input type="text" placeholder="Last Name" label="Last Name"/>
-                    
+                    <p>
+                        Full Name: <span>
+                    <input type="text" placeholder="First Name" label= "First Name" id="inputFirstName"/>
+                    <input type="text" placeholder="Last Name" label="Last Name" id="inputLastName"/>
+                     </p>
+                </span>
                 </div>
                 <input type="text" placeholder="First Item" required label="Item"/>
                 <input type="submit" value="Add"/>
             </form>
         </main>
+
+
     <footer>
         This project was coded by Laurel Stokely
     </footer>
